# attendanceProject

./: .gitignore  LICENSE  README.md  attendancedb_init.sql  backupdb.sh  pyproject.toml  requirements.txt  signInScript.py
3DModels/: holderBottomFinal.stl  holderTopFinal.stl  orange_pi-zero2-bottom.stl  orange_pi-zero2-top.stl
app/: main.py
app/pages/: home.md
attendancetracker/: __main__.py
attendancetracker/app/: main.py
attendancetracker/templates/: adminEditSignIn.html  adminEditSignInSheet.html  adminEditUsers.html  adminHome.html  adminLogin.html  adminRedirect.html  adminReports.html  adminSignInSheet.html  home.html  qr.html  register.html  reports.html
attendancetracker/templates/include/: topnav.html
make-id/: make-id-cards.py
templates/: adminReports.html  base.html  page.html  register.html  reports.html
templates/include/: topnav.html
