[tool.poetry]
name = "attendancetracker"
version = "0.1.0"
description = ""
authors = ["Ethan Djajadi <ethan.djajadi@gmail.com>"]
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.1"
aiofiles = "^0.7.0"
python-multipart = "^0.0.5"
jinja2 = "^3.0.2"
Markdown = "^3.3.4"
pymysql = "^1.0.3"

[tool.poetry.scripts]
attendancetracker = "attendancetracker.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
